@@ -1,4 +1,5 @@
 current SVN version
+	Isgl3dView: add method to convert 3D world position to 2D viewport point
 	Tests added for keyframe mesh with primitive data and imported pod data
 	Isgl3dKeyframeMesh: added to provide keyframe vertex animation of meshes
 	Added touch event handling to particles (implementation with help from Massimiliano Rossi) 
